# RAG-System-AI-assistant

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirments.txt  temp_B -Tree and B+ Tree.pptx
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ChatBox.js  Upload.js
ingestion/: ingestion.py
llm/: llm_model.py
prompts/: prompt.py
retrievel/: retriever.py
vectorstore/: db.py
